--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.1",
     "@mui/system": "^5.15.15",
     "appwrite": "^15.0.0",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-media-recorder": "^1.6.6",
