--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.16.1",
     "@mui/system": "^5.15.15",
+    "@react-oauth/google": "^0.12.1",
     "appwrite": "^15.0.0",
     "date-fns": "^3.6.0",
+    "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-media-recorder": "^1.6.6",
